Add JDK9+ karaf configuration
karaf-4.2.2 and later needs additional JVM configuration to work
with JDK9+, otherwise it fails to boot.

This patch adds that configuration based on Karaf's ExampleITest.

Change-Id: I547329afb1fdad990a4a13b8001be78f7c676497
JIRA: ODLPARENT-182
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>